# Mental-Health-Monitoring-System

./: .gitignore  DISCLAIMER.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py  train.py
configs/: default.yaml
demo/: app.py
scripts/: evaluate.py
src/metrics/: __init__.py
src/models/: __init__.py
src/train/: __init__.py
src/utils/: __init__.py  explainability.py  privacy.py
tests/: test_system.py
